# SchrodingerGL

./: .gitignore  CMakeLists.txt  OpenCLWrapper.h  README.md  common.h  frag.glsl  kernel.c  main.c  main.c~  mcomplex.h  norm.tex  vertex.glsl
lib/glew_build/: glew.pc
lib/glfw/src/: mappings.h
